--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+# Java files #
 *.class
 
-# Mobile Tools for Java (J2ME)
+# Mobile Tools for Java (J2ME) #
 .mtj.tmp/
 
 # Package Files #
@@ -8,12 +9,12 @@
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 # NetBeans specific #
-nbproject/private/
 nbproject/*
+nbproject/private/
 build/
 nbbuild/
 dist/
